tests/ui/span/issue-29595.stderr
error[E0277]: the trait bound `u8: Tr` is not satisfied
  --> $DIR/issue-29595.rs:6:17
   |
LL |     let a: u8 = Tr::C;
   |                 ^^^^^ the trait `Tr` is not implemented for `u8`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
